...
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: [
                      Column(
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          const Text(
                            'Hello,',
                            style: TextStyle(
                              color: Colors.black54,
                              fontSize: 14,
                            ),
                          ),
                          Text(
...
                        icon: Icons.edit,
                        title: 'Custom Outfit',
                        onTap: () => Navigator.pushNamed(context, '/custom'),
                      ),
                      FeatureCard(
                        icon: Icons.recommend_outlined,
                        title: 'Rekomendasi',
                        onTap: () =>
                            Navigator.pushNamed(context, '/recommendation'),
                      ),
                      FeatureCard(
                        icon: Icons.color_lens,
                        title: 'Warna Kulit',
...
