...
                  ),
                  GestureDetector(
                    onTap: () {
                      Navigator.pushReplacementNamed(context, '/login');
                    },
                    child: Text(
                      'Login',
                      style: TextStyle(
                        color: Color(0xFFA79277),
                        fontWeight: FontWeight.w500,
                      ),
                    ),
                  ),
...
